2008-03-12  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/drivers/domelna40cm.py:
	Converted to new MetaObject framework.
	Converted to use exceptions.
	Converted to use full event-driven system.

	Remove old documentation.
	Remove unneeded debug of protocol.

	IMPORTANT: Add phase difference between dome and scope (180
	deg). So, dome receive a coord and convert to its own reference
	frame and do vice-versa when returning on getAz. Azimuth is ALWAYS
	in telescope reference frame.

2008-03-12  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/drivers/fakecamera.py:
	* src/chimera/drivers/fakedome.py:
	* src/chimera/drivers/fakefilterwheel.py:
	* src/chimera/drivers/fakefocuser.py:
	* src/chimera/drivers/faketelescope.py: New babies! Fake drivers
	allow test units to be developed without real hardware
	access. Must be more complete (in API and behaviour) in the
	future.

2008-03-12  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/instruments/camera.py:
	* src/chimera/instruments/filterwheel.py:
	* src/chimera/instruments/telescope.py:
	* src/chimera/instruments/dome.py:
	* src/chimera/instruments/focuser.py: Every iinstrument
	implementation have been improved, with full exception handling
	support and new interfaces implemented. Test it, please!

	* src/chimera/instruments/tests/test_telescope.py: More tests
	added.

	* src/chimera/instruments/tests/test_filterwheel.py:
	* src/chimera/instruments/tests/test_dome.py:
	* src/chimera/instruments/tests/test_focuser.py:
	* src/chimera/instruments/tests/test_camera.py: New unit tests for
	instruments.

2008-03-12  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/interfaces/camera.py:
	* src/chimera/interfaces/filterwheel.py:
	* src/chimera/interfaces/telescopedriver.py:
	* src/chimera/interfaces/domedriver.py:
	* src/chimera/interfaces/weatherstation.py:
	* src/chimera/interfaces/focuserdriver.py:
	* src/chimera/interfaces/telescope.py:
	* src/chimera/interfaces/dome.py: